--- a/LoginWithFirebase/Supporting Files/Info.plist
+++ b/LoginWithFirebase/Supporting Files/Info.plist
@@ -36,5 +36,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<false/>
 </dict>
 </plist>
